--- a/01_lesson/index.html
+++ b/01_lesson/index.html
@@ -6,12 +6,10 @@
     <title>Урок_1</title>
 </head>
 <body>
-    <section class="main">
-        <section class="prod__block">
-            <div class="prod__block__item">Первый товар</div>
-            <div class="prod__block__item">Второй товар</div>
-            <div class="prod__block__item">Третий товар</div>
-        </section>
+    <section class="home">
+        <h1>Домашняя страница</h1>
+        <div>Вы посетили данную страницу<p class="counter"></p></div>
+        <a href="/about.html">Ссылка на страницу / about</a>
     </section>
     <script src="script.js"></script>
 </body>
